--- a/results/message.html
+++ b/results/message.html
@@ -3,8 +3,63 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>無標題文件</title>
+<style type="text/css">
+body {
+	margin-left: 0px;
+	margin-top: 0px;
+}
+</style>
 </head>
 
 <body>
+<table width="500" border="1" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFDDDD">
+  <tr>
+    <td width="150" height="32" align="center" valign="middle">公司名稱</td>
+    <td width="350" height="32" align="center" valign="middle">大家來購物有限公司</td>
+  </tr>
+  <tr>
+    <td width="150" height="32" align="center" valign="middle">公司電子信箱</td>
+    <td width="350" height="32" align="center" valign="middle">service@test.labor.gov.tw</td>
+  </tr>
+  <tr>
+    <td width="150" height="32" align="center" valign="middle">服務項目</td>
+    <td width="350" height="32" align="center" valign="middle">網路購物服務</td>
+  </tr>
+</table>
+<br />
+<br />
+<table width="500" border="1" align="center" cellpadding="0" cellspacing="0" bgcolor="#FF9">
+  <tr>
+    <td width="150" height="32" align="center" valign="middle">客戶姓名</td>
+    <td width="350" height="32" align="left" valign="middle"><form id="form1" name="form1" method="post" action="">
+      <label for="textfield"></label>
+      <input name="textfield" type="text" id="textfield" size="20" />
+    </form></td>
+  </tr>
+  <tr>
+    <td width="150" height="32" align="center" valign="middle">電子信箱</td>
+    <td width="350" height="32" align="left" valign="middle"><form id="form2" name="form2" method="post" action="">
+      <label for="textfield2"></label>
+      <input name="textfield2" type="text" id="textfield2" size="30" />
+    </form></td>
+  </tr>
+  <tr>
+    <td width="150" height="32" align="center" valign="middle">意見留言</td>
+    <td width="350" height="32" align="left" valign="middle"><form id="form3" name="form3" method="post" action="">
+      <label for="textarea"></label>
+      <textarea name="textarea" id="textarea" cols="30" rows="5"></textarea>
+    </form></td>
+  </tr>
+</table>
+<br />
+<br />
+<form id="form4" name="form4" method="post" action="">
+  <div align="center">
+    <input name="button" type="submit" id="button" onclick="confirm(&quot;歡迎蒞臨本網站，您的寶貴意見我們會儘速處 理與回覆，謝謝！&quot;) " value="送出" />
+    
+    <input type="reset" name="button2" id="button2" value="重置" />
+  </div>
+</form>
+<div align="center"></div>
 </body>
 </html>
