--- a/index.html
+++ b/index.html
@@ -8,29 +8,22 @@ body {
 	margin-left: 0px;
 	margin-top: 0px;
 }
-#marquee {
-	width: 1024px;
+#div1 {
 	font-family: "標楷體";
-	background-image: url(images/0402.jpg);
-	line-height: 30px;
-	height: 30px;
-}
-#marquee {
-	font-family: "標楷體";
-	line-height: 30px;
-	background-image: url(images/0402.jpg);
+	font-size: large;
+	color: #00f;
 	height: 30px;
 	width: 100%;
-	font-size: 19px;
-	color: #00F;
 }
-#F1 {
+.bgi {
+	background-image: url(images/0402.jpg);
+}
+.t1 {
 	font-family: "標楷體";
 	line-height: 200%;
-	color: #FFFFFF;
+	color: #FFF;
 }
 a:link {
-	color: #FFF;
 	text-decoration: none;
 }
 a:visited {
@@ -42,7 +35,6 @@ a:hover {
 }
 a:active {
 	text-decoration: none;
-	color: #FFF;
 }
 </style>
 </head>
@@ -50,20 +42,20 @@ a:active {
 <body>
 <table width="1024" border="1" align="center" cellpadding="0" cellspacing="0">
   <tr>
-    <td height="120" align="center" valign="middle"><a href="index.html"><img src="images/0401a.jpg" width="1024" height="120" alt="流行精品購物網站" /></a></td>
+    <td height="120" align="center" valign="middle"><a href="index.html" target="_top"><img src="images/logo.jpg" width="1024" height="120" alt="流行精品購物網站" /></a></td>
   </tr>
   <tr>
-    <td height="570" align="center" valign="top"><div id="marquee"><marquee>大家來購物網！精品商品特價大拍賣！要買要快！</marquee>
-      <iframe src="others/main.html" name="imain" width="1024" height="540" scrolling="no" frameborder="no"></iframe>
-    </div></td>
+    <td height="570" align="center" valign="top" class="bgi">
+      <div class="bgi" id="div1"><marquee>大家來購物網！精品商品特價大拍賣！要買要快！</marquee>
+      </div>
+        <iframe src="others/main.html" name="imain" width="100%" height="100%" scrolling="no" frameborder="0"></iframe>
+</td>
   </tr>
   <tr>
-    <td height="78" bgcolor="#666600" id="F1"><a href="results/message.html" target="imain">訪客留言版</a><br />
-    網頁設計及維護：04莊以安、最近更新日期：2021/05/01</td>
+    <td height="78" align="left" valign="middle" bgcolor="#666600" class="t1"><a href="results/message.html" target="imain" class="t1">訪客留言版</a><br />
+    網頁設計及維護：04莊以安、最近更新日期：2021/06/11</td>
   </tr>
 </table>
-<p>
-  <embed src="music/0401.mp3" width="32" height="32" hidden="true"></embed>
-</p>
+<embed src="music/0401.mp3" width="32" height="32" hidden="true"></embed>
 </body>
 </html>
