--- a/others/main.html
+++ b/others/main.html
@@ -3,24 +3,31 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>無標題文件</title>
+<style type="text/css">
+body {
+	margin-left: 0px;
+	margin-top: 0px;
+	text-align: center;
+}
+</style>
 </head>
 
 <body background="../images/0402.jpg">
-<table width="800" border="1" align="center" cellpadding="0" cellspacing="0">
+<table width="800" border="1" align="center" cellpadding="0" cellspacing="0" bgcolor="#FF9">
   <tr>
     <td width="200" height="150" align="center" valign="middle"><a href="../results/purchase.html" target="imain">流行皮件</a></td>
-    <td width="300" align="center" valign="middle"><a href="../results/leather1.html" target="new"><img src="../images/0403.jpg" width="250" height="150" /></a></td>
-    <td width="300" align="center" valign="middle"><a href="../results/leather2.html" target="new"><img src="../images/0404.jpg" width="216" height="150" /></a></td>
+    <td width="300" height="150" align="center" valign="middle"><a href="../results/leather1.html" target="new"><img src="../images/0403.jpg" width="250" height="150" /></a></td>
+    <td width="300" height="150" align="center" valign="middle"><a href="../results/leather2.html" target="new"><img src="../images/0404.jpg" alt="" height="150" /></a></td>
   </tr>
   <tr>
     <td width="200" height="150" align="center" valign="middle">流行鞋區</td>
-    <td width="300" align="center" valign="middle"><img src="../images/0405.jpg" width="250" height="150" /></td>
-    <td width="300" align="center" valign="middle"><img src="../images/0406.jpg" width="240" height="150" /></td>
+    <td width="300" height="150" align="center" valign="middle"><img src="../images/0405.jpg" alt="" width="250" height="150" /></td>
+    <td width="300" height="150" align="center" valign="middle"><img src="../images/0406.jpg" alt="" width="240" height="150" /></td>
   </tr>
   <tr>
     <td width="200" height="150" align="center" valign="middle">流行飾品</td>
-    <td width="300" align="center" valign="middle"><img src="../images/0407.jpg" width="149" height="150" /></td>
-    <td width="300" align="center" valign="middle"><img src="../images/0408.jpg" width="249" height="150" /></td>
+    <td width="300" height="150" align="center" valign="middle"><img src="../images/0407.jpg" alt="" width="149" height="150" /></td>
+    <td width="300" height="150" align="center" valign="middle"><img src="../images/0408.jpg" alt="" width="249" height="150" /></td>
   </tr>
 </table>
 </body>
