--- a/results/leather2.html
+++ b/results/leather2.html
@@ -2,9 +2,39 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>無標題文件</title>
+<title>真皮短夾</title>
+<style type="text/css">
+body {
+	margin-left: 0px;
+	margin-top: 0px;
+	font-family: "標楷體";
+	font-size: x-large;
+	color: #00F;
+	background-color: #FFFF99;
+}
+</style>
 </head>
 
 <body>
+<div align="center">
+  <p><a name="top" id="top"></a></p>
+  <p><img src="../images/0404.jpg" width="568" height="396" alt="真皮短夾" /><br />
+    <br />
+    <br />
+  </p>
+  <p>流行皮件中分類:男用皮件</p>
+  <p>商品簡介:真皮短夾<br />
+    價錢:800<br />
+    規格:L號<br />
+    庫存量:61</p>
+  <p>商品詳細介紹:<br />
+    基本:編織皮革對摺長款零錢包<br />
+    特色:最潮流最時尚的單品<br />
+    顏色:黑色珠光面皮(黑色縫線)<br />
+    形狀:黑白格編織皮革對摺<br />
+    <br />
+    <a href="#top"><img src="../images/0409.jpg" width="76" height="44" alt="top" /></a><br />
+  </p>
+</div>
 </body>
 </html>
