--- a/results/purchase.html
+++ b/results/purchase.html
@@ -3,53 +3,63 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>無標題文件</title>
+<style type="text/css">
+body {
+	margin-left: 0px;
+	margin-top: 0px;
+	text-align: center;
+}
+#form3 {
+	text-align: center;
+}
+</style>
 </head>
 
-<body background="../images/0402.jpg">
-<form id="form1" name="form1" method="post" action="">
-  <table width="800" border="1" align="center" cellpadding="0" cellspacing="0">
-    <tr>
-      <td width="400" height="100" align="center" valign="middle" bgcolor="#FFFF99">真皮皮包</td>
-      <td width="400" align="center" valign="middle" bgcolor="#FFFF99">真皮短夾</td>
-    </tr>
-    <tr>
-      <td height="150" align="center" valign="middle" bgcolor="#FFFF99"><img src="../images/0403.jpg" width="250" height="150" /></td>
-      <td align="center" valign="middle" bgcolor="#FFFF99"><img src="../images/0404.jpg" width="216" height="150" /></td>
-    </tr>
-    <tr>
-      <td height="100" align="center" valign="middle" bgcolor="#FFFF99"><p>
+<body>
+ <table width="800" border="1" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFF99">
+  <tr align="center" valign="middle">
+    <td width="400" height="100">真皮皮包</td>
+    <td width="400" height="100">真皮短夾</td>
+  </tr>
+  <tr>
+    <td width="400" height="150" align="center" valign="middle"><img src="../images/0403.jpg" width="250" height="150" alt="真皮皮包" /></td>
+    <td width="400" height="150" align="center" valign="middle"><img src="../images/0404.jpg" width="216" height="150" alt="真皮短夾" /></td>
+  </tr>
+  <tr align="center" valign="middle">
+    <td width="400" height="100"><form id="form1" name="form1" method="post" action="">
+      <p>
         <label>
-          <input name="buy1" type="radio" id="buy1_0" value="購買" checked="checked" />
+          <input type="radio" name="buy1" value="購買" id="buy1" checked="checked" />
           購買</label>
         <label>
-          <input type="radio" name="buy1" value="不購買" id="buy1_1" />
+          <input type="radio" name="buy1" value="不購買" id="buy1" />
           不購買</label>
         <label>
-          <input type="radio" name="buy1" value="考慮中" id="buy1_2" />
+          <input type="radio" name="buy1" value="考慮中" id="buy1" />
           考慮中</label>
         <br />
-      </p></td>
-      <td align="center" valign="middle" bgcolor="#FFFF99"><p>
+      </p>
+    </form></td>
+    <td width="400" height="100"><form id="form2" name="form2" method="post" action="">
+      <p>
         <label>
-          <input type="radio" name="buy2" value="購買" id="buy2_0" />
+          <input type="radio" name="buy2" value="購買" id="buy2" />
           購買</label>
         <label>
-          <input type="radio" name="buy2" value="不購買" id="buy2_1" />
+          <input type="radio" name="buy2" value="不購買" id="buy2" />
           不購買</label>
         <label>
-          <input name="buy2" type="radio" id="buy2_2" value="考慮中" checked="checked" />
+          <input type="radio" name="buy2" value="考慮中" id="buy2" checked="checked" />
           考慮中</label>
         <br />
-      </p></td>
-    </tr>
-  </table>
-  <p align="center">
-    <input name="button" type="submit" id="button" onclick="confirm('流行皮件選購確認：'+'\n\n●真皮皮包：'+form1.buy1.value+'\n\n●真皮短夾'+form2.buy2.value )" value="送出" />
-    <input type="reset" name="button2" id="button2" value="重置" />
-  </p>
-  <p align="center">&nbsp;</p>
-  <p align="center" onclick="confirm('流行皮件選購確認：'+'\n\n●真皮皮包：'+form1.buy1.value+'\n\n●真皮短夾'+form2.buy2.value)">confirm('流行皮件選購確認：'+'\n\n●真皮皮包：'+form1.buy1.value+'\n\n●真皮短夾'+form2.buy2.value
-  )</p>
+      </p>
+    </form></td>
+  </tr>
+ </table>
+<br />
+<form id="form3" name="form3" method="post" action="">
+  <input name="button" type="submit" id="button" onclick="confirm(&quot;流行皮件選購確認：&quot;+&quot;\n\n●真皮皮包：&quot;+form1.buy1.value+&quot;\n\n●真皮短夾：&quot;+form2.buy2.value)" value="送出" />
+  <input type="reset" name="button2" id="button2" value="重置" />
 </form>
 </body>
 </html>
